--- a/pom.xml
+++ b/pom.xml
@@ -68,9 +68,9 @@
             <version>1.7.36</version>
         </dependency>
         <dependency>
-            <groupId>org.kill-bill.billing.plugin.java</groupId>
-            <artifactId>hello-world-plugin</artifactId>
-            <version>2.0.1-SNAPSHOT</version>
+            <groupId>org.eclipse.jetty.toolchain</groupId>
+            <artifactId>jetty-servlet-api</artifactId>
+            <version>4.0.6</version>
         </dependency>
     </dependencies>
     <build>
