--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.killbill.billing.plugin</groupId>
     <artifactId>sale-plugin</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.2</version>
     <packaging>jar</packaging>
 
     <dependencies>
@@ -71,6 +71,11 @@
             <groupId>org.eclipse.jetty.toolchain</groupId>
             <artifactId>jetty-servlet-api</artifactId>
             <version>4.0.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.kill-bill.billing.plugin.java</groupId>
+            <artifactId>hello-world-plugin</artifactId>
+            <version>2.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
     <build>
