--- a/pom.xml
+++ b/pom.xml
@@ -155,5 +155,13 @@
                 <artifactId>maven-bundle-plugin</artifactId>
             </plugin>
         </plugins>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <excludes>
+                    <exclude>application.properties</exclude>
+                </excludes>
+            </resource>
+        </resources>
     </build>
 </project>
