Ignore application.properties

--- a/.gitignore
+++ b/.gitignore
@@ -2,14 +2,14 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-
+!**/src/main/resources/application.properties
 # User-specific stuff
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
-
+application.properties
 # Gradle
 .idea/**/gradle.xml
 .idea/**/libraries
